# MHD_Onset_Solver

./: .gitignore  CMakeLists.txt  LICENSE  READme.md
src/: bc.cpp  bc.h  cheb.cpp  cheb.h  coeffs.cpp  coeffs.h  eigen_solver.cpp  eigen_solver.h  main.cpp  matrix_builder.cpp  matrix_builder.h  params.cpp  params.h  params.ini  utils.cpp  utils.h
